New Crowdin updates (#10969)
* fix: New Romanian translations from Crowdin [ci skip]

* fix: New French translations from Crowdin [ci skip]

* fix: New Spanish translations from Crowdin [ci skip]

* fix: New Czech translations from Crowdin [ci skip]

* fix: New Danish translations from Crowdin [ci skip]

* fix: New German translations from Crowdin [ci skip]

* fix: New Hebrew translations from Crowdin [ci skip]

* fix: New Hungarian translations from Crowdin [ci skip]

* fix: New Italian translations from Crowdin [ci skip]

* fix: New Japanese translations from Crowdin [ci skip]

* fix: New Korean translations from Crowdin [ci skip]

* fix: New Dutch translations from Crowdin [ci skip]

* fix: New Polish translations from Crowdin [ci skip]

* fix: New Portuguese translations from Crowdin [ci skip]

* fix: New Swedish translations from Crowdin [ci skip]

* fix: New Turkish translations from Crowdin [ci skip]

* fix: New Ukrainian translations from Crowdin [ci skip]

* fix: New Chinese Simplified translations from Crowdin [ci skip]

* fix: New Chinese Traditional translations from Crowdin [ci skip]

* fix: New Vietnamese translations from Crowdin [ci skip]

* fix: New Portuguese, Brazilian translations from Crowdin [ci skip]

* fix: New Indonesian translations from Crowdin [ci skip]

* fix: New Persian translations from Crowdin [ci skip]

* fix: New Thai translations from Crowdin [ci skip]

* fix: New English, United Kingdom translations from Crowdin [ci skip]

* fix: New Norwegian Bokmal translations from Crowdin [ci skip]

* fix: New Dutch translations from Crowdin [ci skip]

* fix: New Romanian translations from Crowdin [ci skip]

* fix: New French translations from Crowdin [ci skip]

* fix: New Spanish translations from Crowdin [ci skip]

* fix: New Czech translations from Crowdin [ci skip]

* fix: New Danish translations from Crowdin [ci skip]

* fix: New German translations from Crowdin [ci skip]

* fix: New Hebrew translations from Crowdin [ci skip]

* fix: New

--- a/shared/i18n/locales/da_DK/translation.json
+++ b/shared/i18n/locales/da_DK/translation.json
@@ -388,6 +388,7 @@
   "Revision deleted": "Revision slettet",
   "Current version": "Aktuelle version",
   "{{userName}} edited": "{{userName}} redigerede",
+  "Revision options": "Revision options",
   "Results": "Resultater",
   "No results for {{query}}": "Ingen resultater for {{query}}",
   "Manage": "Administrér",
@@ -473,7 +474,7 @@
   "Change permissions?": "Ændr tilladelser?",
   "{{ documentName }} cannot be moved within {{ parentDocumentName }}": "{{ documentName }} kan ikke flyttes indenfor {{ parentDocumentName }}",
   "You can't reorder documents in an alphabetically sorted collection": "Du kan ikke omarrangere dokumenter i en alfabetisk sorteret samling",
-  "The {{ documentName }} cannot be moved here": "{{ documentName }} kan ikke flyttes hertil",
+  "{{ documentName }} cannot be moved here": "{{ documentName }} cannot be moved here",
   "Return to App": "Tilbage til app",
   "Installation": "Installation",
   "Unstar document": "Unstar document",
@@ -554,6 +555,7 @@
   "Italic": "Kursiv",
   "Sorry, that link won’t work for this embed type": "Beklager, linket virker ikke for denne indlejrede type",
   "File attachment": "Vedhæftet fil",
+  "Embed PDF": "Embed PDF",
   "Enter a link": "Indsæt et link",
   "Big heading": "Stor overskrift",
   "Medium heading": "Mellem overskrift",
@@ -615,6 +617,7 @@
   "Account": "Account",
   "API & Apps": "API & Apps",
   "Details": "Details",
+  "Authentication": "Authentication",
   "Security": "Security",
   "Features": "Features",
   "Members": "Members",
@@ -647,7 +650,6 @@
   "Revoking": "Revoking",
   "Are you sure you want to revoke access?": "Are you sure you want to revoke access?",
   "Delete app": "Delete app",
-  "Revision options": "Revision options",
   "Share options": "Share options",
   "Headings you add to the document will appear here": "Headings you add to the document will appear here",
   "Contents": "Contents",
@@ -1003,6 +1005,19 @@
   "Authorization URL": "Authorization URL",
   "Where users are redirected to authorize this app": "Where users are redirected to authorize this app",
   "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.": "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.",
+  "Settings saved": "Settings saved",
+  "Are you sure?": "Are you sure?",
+  "Removing": "Removing",
+  "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.": "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.",
+  "Manage how members sign-in to your workspace and which authentication providers are enabled.": "Manage how members sign-in to your workspace and which authentication providers are enabled.",
+  "Allow members to sign-in with {{ authProvider }}": "Tillad medlemmer at logge ind med {{ authProvider }}",
+  "Connect {{ authProvider }} to allow members to sign-in": "Connect {{ authProvider }} to allow members to sign-in",
+  "Connected": "Connected",
+  "Disabled": "Deaktiveret",
+  "Connect": "Connect",
+  "Allow members to sign-in using their email address": "Tillad medlemmer at logge ind med deres e-mailadresse",
+  "The server must have SMTP configured to enable this setting": "Serveren skal have SMTP konfigureret for at aktivere denne indstilling",
+  "Restrictions": "Restrictions",
   "by {{ name }}": "by {{ name }}",
   "Last used": "Last used",
   "No expiry": "No expiry",
@@ -1011,7 +1026,6 @@
   "Copied": "Copied",
   "Are you sure you want to revoke the {{ tokenName }} token?": "Are you sure you want to revoke the {{ tokenName }} token?",
   "Disconnect integration": "Disconnect integration",
-  "Connected": "Connected",
   "Disconnecting": "Disconnecting",
   "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
   "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
@@ -1082,7 +1096,6 @@
   "You can import a zip file that was previously exported from an Outline installation – collections, documents, and images will be imported. In Outline, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "You can import a zip file that was previously exported from an Outline installation – collections, documents, and images will be imported. In Outline, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.",
   "Drag and drop the zip file from the Markdown export option in {{appName}}, or click to upload": "Drag and drop the zip file from the Markdown export option in {{appName}}, or click to upload",
   "Configure": "Configure",
-  "Connect": "Connect",
   "Last active": "Last active",
   "Role": "Rolle",
   "Guest": "Guest",
@@ -1103,7 +1116,6 @@
   "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Left",
   "Right": "Right",
-  "Settings saved": "Settings saved",
   "Logo updated": "Logo updated",
   "Unable to upload new logo": "Unable to upload new logo",
   "Delete workspace": "Delete workspace",
@@ -1208,11 +1220,7 @@
   "Are you sure you want to require invites?": "Er du sikker på, at du vil kræve invitationer?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "Nye brugere skal først inviteres til at oprette en konto. <em>Standard rolle</em> og <em>Tilladte domæner</em> vil ikke længere gælde.",
   "Settings that impact the access, security, and content of your workspace.": "Indstillinger, der påvirker adgang, sikkerhed og indhold i dit arbejdsområde.",
-  "Allow members to sign-in with {{ authProvider }}": "Tillad medlemmer at logge ind med {{ authProvider }}",
-  "Disabled": "Deaktiveret",
-  "Allow members to sign-in using their email address": "Tillad medlemmer at logge ind med deres e-mailadresse",
-  "The server must have SMTP configured to enable this setting": "Serveren skal have SMTP konfigureret for at aktivere denne indstilling",
-  "Access": "Adgang",
+  "Invites": "Invites",
   "Allow users to send invites": "Tillad brugere at sende invitationer",
   "Allow editors to invite other people to the workspace": "Tillad redaktører at invitere andre personer til arbejdsrummet",
   "Require invites": "Kræv invitationer",
