--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -388,6 +388,7 @@
   "Revision deleted": "수정본 삭제됨",
   "Current version": "현재 버전",
   "{{userName}} edited": "{{userName}} 이(가) 수정함",
+  "Revision options": "수정 옵션",
   "Results": "결과",
   "No results for {{query}}": "{{query}} 에 대한 검색결과가 없습니다.",
   "Manage": "관리",
@@ -473,7 +474,7 @@
   "Change permissions?": "권한을 변경할까요?",
   "{{ documentName }} cannot be moved within {{ parentDocumentName }}": "{{ documentName }} 은(는) {{ parentDocumentName }} 내에서 이동할 수 없음",
   "You can't reorder documents in an alphabetically sorted collection": "알파벳순으로 정렬된 컬렉션에서는 문서를 재정렬할 수 없습니다.",
-  "The {{ documentName }} cannot be moved here": "{{documentName}} 은(는) 여기로 이동할 수 없음",
+  "{{ documentName }} cannot be moved here": "{{ documentName }} cannot be moved here",
   "Return to App": "앱으로 돌아가기",
   "Installation": "설치",
   "Unstar document": "문서 별표 해제",
@@ -554,6 +555,7 @@
   "Italic": "이탤릭체",
   "Sorry, that link won’t work for this embed type": "죄송합니다, 해당 링크를 이 임베드 유형에서 사용할 수 없습니다",
   "File attachment": "첨부 파일",
+  "Embed PDF": "Embed PDF",
   "Enter a link": "링크 입력",
   "Big heading": "큰 제목",
   "Medium heading": "중간 제목",
@@ -615,6 +617,7 @@
   "Account": "계정",
   "API & Apps": "API 및 앱",
   "Details": "세부 정보",
+  "Authentication": "Authentication",
   "Security": "보안",
   "Features": "실험적 기능",
   "Members": "멤버",
@@ -647,7 +650,6 @@
   "Revoking": "취소",
   "Are you sure you want to revoke access?": "정말로 접근을 취소하시겠습니까?",
   "Delete app": "앱 삭제",
-  "Revision options": "수정 옵션",
   "Share options": "공유 옵션",
   "Headings you add to the document will appear here": "문서에 추가한 제목이 여기에 표시됩니다.",
   "Contents": "콘텐츠",
@@ -1003,6 +1005,19 @@
   "Authorization URL": "인증 URL",
   "Where users are redirected to authorize this app": "사용자가 이 앱을 승인하도록 리디렉션되는 위치",
   "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.": "애플리케이션을 사용하면 Outline과 내부 또는 공개 통합을 구축하고 OAuth를 통해 보안 액세스를 제공할 수 있습니다. 자세한 내용은 <em>개발자 문서</em>를 참조하세요.",
+  "Settings saved": "설정이 저장되었습니다",
+  "Are you sure?": "Are you sure?",
+  "Removing": "Removing",
+  "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.": "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.",
+  "Manage how members sign-in to your workspace and which authentication providers are enabled.": "Manage how members sign-in to your workspace and which authentication providers are enabled.",
+  "Allow members to sign-in with {{ authProvider }}": "멤버가 {{ authProvider }} 으로 로그인하도록 허용",
+  "Connect {{ authProvider }} to allow members to sign-in": "Connect {{ authProvider }} to allow members to sign-in",
+  "Connected": "연결됨",
+  "Disabled": "비활성화됨",
+  "Connect": "연결",
+  "Allow members to sign-in using their email address": "멤버가 이메일 주소를 사용하여 로그인하도록 허용",
+  "The server must have SMTP configured to enable this setting": "이 설정을 사용하려면 서버에 SMTP가 구성되어 있어야 합니다.",
+  "Restrictions": "Restrictions",
   "by {{ name }}": "{{ name }} 에 의해",
   "Last used": "최근 사용됨",
   "No expiry": "만료 없음",
@@ -1011,7 +1026,6 @@
   "Copied": "복사됨",
   "Are you sure you want to revoke the {{ tokenName }} token?": "{{ tokenName }} 토큰을 취소하시겠습니까?",
   "Disconnect integration": "통합 해제",
-  "Connected": "연결됨",
   "Disconnecting": "연결을 해제하는 중",
   "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "서비스 <em>{{ service }}</em>와 통합을 해제하시겠습니까?",
   "This will stop sending analytics events to the configured instance.": "이렇게 하면 구성된 인스턴스로 분석 이벤트가 전송되지 않습니다.",
@@ -1082,7 +1096,6 @@
   "You can import a zip file that was previously exported from an Outline installation – collections, documents, and images will be imported. In Outline, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "이전에 Outline 설치에서 내보낸 Zip 파일을 가져올 수 있습니다. 이는 컬렉션, 문서, 이미지를 가져옵니다. Outline에서 설정 사이드바의 <em>내보내기</em> 열고 <em>데이터 내보내기</em>클릭합니다.",
   "Drag and drop the zip file from the Markdown export option in {{appName}}, or click to upload": "{{appName}} 의 Json 내보내기 옵션에서 zip 파일을 드래그 앤 드롭하거나 클릭하여 업로드",
   "Configure": "구성",
-  "Connect": "연결",
   "Last active": "최근 활동",
   "Role": "역할",
   "Guest": "게스트",
@@ -1103,7 +1116,6 @@
   "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "왼쪽",
   "Right": "오른쪽",
-  "Settings saved": "설정이 저장되었습니다",
   "Logo updated": "로고 업데이트됨",
   "Unable to upload new logo": "새 로고를 업로드할 수 없습니다.",
   "Delete workspace": "워크스페이스 삭제",
@@ -1208,11 +1220,7 @@
   "Are you sure you want to require invites?": "초대를 요구하시겠습니까?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "계정을 만들려면 먼저 새 사용자를 초대해야 합니다. <em>기본 역할</em> 및 <em>허용된 도메인</em> 은 더 이상 적용되지 않습니다.",
   "Settings that impact the access, security, and content of your workspace.": "접근, 보안, 워크스페이스 콘텐츠에 영향을 주는 설정입니다.",
-  "Allow members to sign-in with {{ authProvider }}": "멤버가 {{ authProvider }} 으로 로그인하도록 허용",
-  "Disabled": "비활성화됨",
-  "Allow members to sign-in using their email address": "멤버가 이메일 주소를 사용하여 로그인하도록 허용",
-  "The server must have SMTP configured to enable this setting": "이 설정을 사용하려면 서버에 SMTP가 구성되어 있어야 합니다.",
-  "Access": "접근",
+  "Invites": "Invites",
   "Allow users to send invites": "사용자가 초대를 보내도록 허용",
   "Allow editors to invite other people to the workspace": "편집자가 다른 인원을 워크스페이스에 초대하도록 허용",
   "Require invites": "초대 필요",
