--- a/shared/i18n/locales/nb_NO/translation.json
+++ b/shared/i18n/locales/nb_NO/translation.json
@@ -388,6 +388,7 @@
   "Revision deleted": "Revisjon slettet",
   "Current version": "Nåværende versjon",
   "{{userName}} edited": "{{userName}} redigerte",
+  "Revision options": "Revisjonsalternativer",
   "Results": "Resultater",
   "No results for {{query}}": "Ingen resultater for {{query}}",
   "Manage": "Administrer",
@@ -473,7 +474,7 @@
   "Change permissions?": "Endre tillatelser?",
   "{{ documentName }} cannot be moved within {{ parentDocumentName }}": "{{ documentName }} kan ikke flyttes i {{ parentDocumentName }}",
   "You can't reorder documents in an alphabetically sorted collection": "Du kan ikke omorganisere dokumenter i en alfabetisk sortert samling",
-  "The {{ documentName }} cannot be moved here": "{{ documentName }} kan ikke flyttes hit",
+  "{{ documentName }} cannot be moved here": "{{ documentName }} cannot be moved here",
   "Return to App": "Tilbake til appen",
   "Installation": "Installasjon",
   "Unstar document": "Fjern stjerne fra dokument",
@@ -554,6 +555,7 @@
   "Italic": "Kursiv",
   "Sorry, that link won’t work for this embed type": "Beklager, den lenken vil ikke fungere for denne innebygde typen",
   "File attachment": "Filvedlegg",
+  "Embed PDF": "Embed PDF",
   "Enter a link": "Skriv inn en lenke",
   "Big heading": "Stor overskrift",
   "Medium heading": "Middels overskrift",
@@ -615,6 +617,7 @@
   "Account": "Konto",
   "API & Apps": "API og apper",
   "Details": "Detaljer",
+  "Authentication": "Authentication",
   "Security": "Sikkerhet",
   "Features": "Funksjoner",
   "Members": "Medlemmer",
@@ -647,7 +650,6 @@
   "Revoking": "Tilbakekaller",
   "Are you sure you want to revoke access?": "Er du sikker på at du vil tilbakekalle tilgangen?",
   "Delete app": "Slett app",
-  "Revision options": "Revisjonsalternativer",
   "Share options": "Delingsalternativer",
   "Headings you add to the document will appear here": "Overskrifter du legger til i dokumentet vil vises her",
   "Contents": "Innhold",
@@ -1003,6 +1005,19 @@
   "Authorization URL": "Autorisasjons-URL",
   "Where users are redirected to authorize this app": "Dit brukere blir omdirigert for autorisering av denne appen",
   "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.": "Applikasjoner tillater deg å bygge interne eller offentlige integrasjoner med Outline og gi sikker tilgang via OAuth. For flere detaljer, se <em>utviklerdokumentasjonen</em>.",
+  "Settings saved": "Innstillinger lagret",
+  "Are you sure?": "Are you sure?",
+  "Removing": "Removing",
+  "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.": "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.",
+  "Manage how members sign-in to your workspace and which authentication providers are enabled.": "Manage how members sign-in to your workspace and which authentication providers are enabled.",
+  "Allow members to sign-in with {{ authProvider }}": "Tillat medlemmer å logge inn med {{ authProvider }}",
+  "Connect {{ authProvider }} to allow members to sign-in": "Connect {{ authProvider }} to allow members to sign-in",
+  "Connected": "Tilkoblet",
+  "Disabled": "Deaktivert",
+  "Connect": "Koble til",
+  "Allow members to sign-in using their email address": "Tillat medlemmer å logge inn med sin e-postadresse",
+  "The server must have SMTP configured to enable this setting": "Serveren må ha SMTP konfigurert for å aktivere denne innstillingen",
+  "Restrictions": "Restrictions",
   "by {{ name }}": "av {{ name }}",
   "Last used": "Sist brukt",
   "No expiry": "Ingen utløpsdato",
@@ -1011,7 +1026,6 @@
   "Copied": "Kopiert",
   "Are you sure you want to revoke the {{ tokenName }} token?": "Er du sikker på at du vil tilbakekalle {{ tokenName }} token?",
   "Disconnect integration": "Koble fra integrasjon",
-  "Connected": "Tilkoblet",
   "Disconnecting": "Kobler fra",
   "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Er du sikker på at du vil koble fra <em>{{ service }}</em>-integrasjonen?",
   "This will stop sending analytics events to the configured instance.": "Dette vil slutte å sende analytiske hendelser til den konfigurerte instansen.",
@@ -1082,7 +1096,6 @@
   "You can import a zip file that was previously exported from an Outline installation – collections, documents, and images will be imported. In Outline, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "Du kan importere en zip-fil som tidligere ble eksportert fra en Outline-installasjon – samlinger, dokumenter og bilder vil bli importert. I Outline, åpne <em>Eksport</em> i innstillingssidestolpen og klikk på <em>Eksporter Data</em>.",
   "Drag and drop the zip file from the Markdown export option in {{appName}}, or click to upload": "Dra og slipp zip-filen fra Markdown-eksportalternativet i {{appName}}, eller klikk for å laste opp",
   "Configure": "Konfigurer",
-  "Connect": "Koble til",
   "Last active": "Sist aktiv",
   "Role": "Rolle",
   "Guest": "Gjest",
@@ -1103,7 +1116,6 @@
   "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Venstre",
   "Right": "Høyre",
-  "Settings saved": "Innstillinger lagret",
   "Logo updated": "Logo oppdatert",
   "Unable to upload new logo": "Kan ikke laste opp ny logo",
   "Delete workspace": "Slett arbeidsområde",
@@ -1208,11 +1220,7 @@
   "Are you sure you want to require invites?": "Er du sikker på at du vil kreve invitasjoner?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "Nye brukere må først inviteres for å opprette en konto. <em>Standardrolle</em> og <em>Tillatte domener</em> vil ikke lenger gjelde.",
   "Settings that impact the access, security, and content of your workspace.": "Innstillinger som påvirker tilgang, sikkerhet og innhold i arbeidsområdet ditt.",
-  "Allow members to sign-in with {{ authProvider }}": "Tillat medlemmer å logge inn med {{ authProvider }}",
-  "Disabled": "Deaktivert",
-  "Allow members to sign-in using their email address": "Tillat medlemmer å logge inn med sin e-postadresse",
-  "The server must have SMTP configured to enable this setting": "Serveren må ha SMTP konfigurert for å aktivere denne innstillingen",
-  "Access": "Tilgang",
+  "Invites": "Invites",
   "Allow users to send invites": "Tillat brukere å sende invitasjoner",
   "Allow editors to invite other people to the workspace": "Tillat redaktører å invitere andre til arbeidsområdet",
   "Require invites": "Krev invitasjoner",
