--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -138,8 +138,8 @@
   "Log out": "Uitloggen",
   "Mark notifications as read": "Meldingen als gelezen markeren",
   "Archive all notifications": "Alle meldingen archiveren",
-  "Mark as read": "Mark as read",
-  "Mark as unread": "Mark as unread",
+  "Mark as read": "Als gelezen markeren",
+  "Mark as unread": "Als ongelezen markeren",
   "New App": "Nieuwe app",
   "New Application": "Nieuwe applicatie",
   "This version of the document was deleted": "Deze versie van het document is verwijderd",
@@ -265,13 +265,13 @@
   "Emoji created successfully": "Emoji met succes aangemaakt",
   "Uploading": "Bezig met uploaden",
   "Add emoji": "Emoji toevoegen",
-  "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.",
+  "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Vierkante afbeeldingen met transparante achtergronden werken het beste. Als de afbeelding te groot is, proberen we het aan te passen.",
   "Upload an image": "Afbeelding uploaden",
   "Click or drag to replace": "Klik of sleep om te vervangen",
   "Drop the image here": "Sleep de afbeelding hierheen",
   "Click, drop, or paste an image here": "Klik, plaats of plak hier een afbeelding",
   "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, of WebP tot {{ size }}",
-  "Choose a name": "Choose a name",
+  "Choose a name": "Kies een naam",
   "name can only contain lowercase letters, numbers, and underscores.": "naam mag alleen kleine letters, cijfers en onderstrepingstekens bevatten.",
   "This emoji will be available as": "Deze emoji zal beschikbaar zijn als",
   "Module failed to load": "Module kon niet geladen worden",
@@ -353,12 +353,12 @@
   "Sorry, an error occurred.": "Sorry, er is iets fout gegaan.",
   "Click to retry": "Klik om opnieuw te proberen",
   "Back": "Terug",
-  "Notification options": "Notification options",
+  "Notification options": "Meldingsopties",
   "Unknown": "Onbekend",
-  "Mentions": "Mentions",
-  "Comments and replies": "Comments and replies",
-  "Document events": "Document events",
-  "Collection events": "Collection events",
+  "Mentions": "Vermeldingen",
+  "Comments and replies": "Opmerkingen en antwoorden",
+  "Document events": "Documentgebeurtenissen",
+  "Collection events": "Collectiegebeurtenissen",
   "Mark all as read": "Markeer alles als gelezen",
   "You're all caught up": "Je bent helemaal bij",
   "Client type": "Type klant",
@@ -388,6 +388,7 @@
   "Revision deleted": "Revisie verwijderd",
   "Current version": "Huidige versie",
   "{{userName}} edited": "{{userName}} bewerkte",
+  "Revision options": "Revisie opties",
   "Results": "Resultaten",
   "No results for {{query}}": "Geen zoekresultaten voor {{query}}",
   "Manage": "Beheer",
@@ -473,7 +474,7 @@
   "Change permissions?": "Machtigingen wijzigen?",
   "{{ documentName }} cannot be moved within {{ parentDocumentName }}": "{{ documentName }} kan niet verplaatst worden binnen {{ parentDocumentName }}",
   "You can't reorder documents in an alphabetically sorted collection": "Je kunt documenten in een alfabetisch gesorteerde collectie niet opnieuw ordenen",
-  "The {{ documentName }} cannot be moved here": "{{ documentName }} kan hier niet naartoe verplaatst worden",
+  "{{ documentName }} cannot be moved here": "{{ documentName }} cannot be moved here",
   "Return to App": "Terug naar de app",
   "Installation": "Installatie",
   "Unstar document": "Document verwijderen uit favorieten",
@@ -554,6 +555,7 @@
   "Italic": "Cursief",
   "Sorry, that link won’t work for this embed type": "Sorry, die link werkt niet voor dit insluitingstype",
   "File attachment": "Bestandsbijlage",
+  "Embed PDF": "PDF insluiten",
   "Enter a link": "Voer een link in",
   "Big heading": "Grote titel",
   "Medium heading": "Middelgrote titel",
@@ -607,7 +609,7 @@
   "Video": "Video",
   "None": "Geen",
   "Delete embed": "Insluiting verwijderen",
-  "Formatting controls": "Formatting controls",
+  "Formatting controls": "Opmaakbesturing",
   "Distribute columns": "Kolommen verdelen",
   "Could not import file": "Kon bestand niet importeren",
   "Unsubscribed from document": "Afgemeld voor document",
@@ -615,6 +617,7 @@
   "Account": "Account",
   "API & Apps": "API & apps",
   "Details": "Details",
+  "Authentication": "Authentication",
   "Security": "Beveiliging",
   "Features": "Features",
   "Members": "Deelnemers",
@@ -647,7 +650,6 @@
   "Revoking": "Intrekken",
   "Are you sure you want to revoke access?": "Weet je zeker dat je de toegang wil intrekken?",
   "Delete app": "App verwijderen",
-  "Revision options": "Revisie opties",
   "Share options": "Deel opties",
   "Headings you add to the document will appear here": "Koppen die je aan het document toevoegt, verschijnen hier",
   "Contents": "Inhoud",
@@ -1003,6 +1005,19 @@
   "Authorization URL": "Autorisatie-URL",
   "Where users are redirected to authorize this app": "Waar gebruikers worden omgeleid om deze app te autoriseren",
   "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.": "Met applicaties kunt je interne of openbare integraties bouwen met Outline en veilige toegang via OAuth bieden. Zie de <em>documentatie</em> voor meer details.",
+  "Settings saved": "Instellingen opgeslagen",
+  "Are you sure?": "Are you sure?",
+  "Removing": "Removing",
+  "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.": "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.",
+  "Manage how members sign-in to your workspace and which authentication providers are enabled.": "Manage how members sign-in to your workspace and which authentication providers are enabled.",
+  "Allow members to sign-in with {{ authProvider }}": "Sta leden toe om in te loggen met {{ authProvider }}",
+  "Connect {{ authProvider }} to allow members to sign-in": "Connect {{ authProvider }} to allow members to sign-in",
+  "Connected": "Verbonden",
+  "Disabled": "Uitgeschakeld",
+  "Connect": "Verbinden",
+  "Allow members to sign-in using their email address": "Sta leden toe om in te loggen met hun e-mailadres",
+  "The server must have SMTP configured to enable this setting": "De server moet SMTP hebben geconfigureerd om deze instelling in te schakelen",
+  "Restrictions": "Restrictions",
   "by {{ name }}": "door {{ name }}",
   "Last used": "Laatst gebruikt",
   "No expiry": "Geen vervaldatum",
@@ -1011,7 +1026,6 @@
   "Copied": "Gekopieerd",
   "Are you sure you want to revoke the {{ tokenName }} token?": "Weet je zeker dat je de token {{ tokenName }} wilt intrekken?",
   "Disconnect integration": "Ontkoppel integratie",
-  "Connected": "Verbonden",
   "Disconnecting": "Ontkoppelen",
   "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Weet je zeker dat je de koppeling met <em>{{ service }}</em> wilt verbreken?",
   "This will stop sending analytics events to the configured instance.": "Hiermee stopt het verzenden van analytics-gebeurtenissen naar de geconfigureerde instantie.",
@@ -1082,7 +1096,6 @@
   "You can import a zip file that was previously exported from an Outline installation – collections, documents, and images will be imported. In Outline, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "Je kunt een zipbestand importeren dat eerder is geëxporteerd vanuit een Outline-installatie – collecties, documenten en afbeeldingen worden geïmporteerd. Open in Outline <em>Export</em> in de zijbalk Instellingen en klik op <em>Gegevens exporteren</em>.",
   "Drag and drop the zip file from the Markdown export option in {{appName}}, or click to upload": "Sleep het zip-bestand vanuit de Markdown-exportoptie in {{appName}}, of klik om te uploaden",
   "Configure": "Configureren",
-  "Connect": "Verbinden",
   "Last active": "Laatst actief",
   "Role": "Rol",
   "Guest": "Gast",
@@ -1103,7 +1116,6 @@
   "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Aangepaste emoji's kunnen worden gebruikt in je hele werkruimte in documenten, opmerkingen en reacties.",
   "Left": "Links",
   "Right": "Rechts",
-  "Settings saved": "Instellingen opgeslagen",
   "Logo updated": "Logo bijgewerkt",
   "Unable to upload new logo": "Kan het nieuwe logo niet uploaden",
   "Delete workspace": "Werkruimte verwijderen",
@@ -1208,11 +1220,7 @@
   "Are you sure you want to require invites?": "Weet je zeker dat je deze uitnodiging wilt verwijderen?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "Nieuwe gebruikers moeten eerst worden uitgenodigd om een account aan te maken. <em>Standaard rol</em> en <em>Toegestane domeinen</em> zullen niet langer van toepassing zijn.",
   "Settings that impact the access, security, and content of your workspace.": "Instellingen die van invloed zijn op de toegang, beveiliging en inhoud van je werkruimte.",
-  "Allow members to sign-in with {{ authProvider }}": "Sta leden toe om in te loggen met {{ authProvider }}",
-  "Disabled": "Uitgeschakeld",
-  "Allow members to sign-in using their email address": "Sta leden toe om in te loggen met hun e-mailadres",
-  "The server must have SMTP configured to enable this setting": "De server moet SMTP hebben geconfigureerd om deze instelling in te schakelen",
-  "Access": "Toegang",
+  "Invites": "Invites",
   "Allow users to send invites": "Gebruikers toestaan uitnodigingen te sturen",
   "Allow editors to invite other people to the workspace": "Redacteurs toestaan om andere personen uit te nodigen voor de werkruimte",
   "Require invites": "Uitnodigingen vereisen",
