--- a/shared/i18n/locales/sv_SE/translation.json
+++ b/shared/i18n/locales/sv_SE/translation.json
@@ -388,6 +388,7 @@
   "Revision deleted": "Revision raderad",
   "Current version": "Nuvarande version",
   "{{userName}} edited": "{{userName}} redigerade",
+  "Revision options": "Alternativ för revidering",
   "Results": "Resultat",
   "No results for {{query}}": "Inga resultat för {{query}}",
   "Manage": "Administrera",
@@ -473,7 +474,7 @@
   "Change permissions?": "Ändra behörigheter?",
   "{{ documentName }} cannot be moved within {{ parentDocumentName }}": "{{ documentName }} kan inte flyttas inom {{ parentDocumentName }}",
   "You can't reorder documents in an alphabetically sorted collection": "Du kan inte ordna om dokument i en alfabetiskt sorterad samling",
-  "The {{ documentName }} cannot be moved here": "The {{ documentName }} cannot be moved here",
+  "{{ documentName }} cannot be moved here": "{{ documentName }} cannot be moved here",
   "Return to App": "Tillbaka till appen",
   "Installation": "Installation",
   "Unstar document": "Ostjärnmärk dokument",
@@ -554,6 +555,7 @@
   "Italic": "Kursiv",
   "Sorry, that link won’t work for this embed type": "Den länken fungerar tyvärr inte för den här inbäddningstypen",
   "File attachment": "Bifogad fil",
+  "Embed PDF": "Embed PDF",
   "Enter a link": "Ange en länk",
   "Big heading": "Stor rubrik",
   "Medium heading": "Medelstor rubrik",
@@ -615,6 +617,7 @@
   "Account": "Konto",
   "API & Apps": "API & appar",
   "Details": "Detaljer",
+  "Authentication": "Authentication",
   "Security": "Säkerhet",
   "Features": "Funktioner",
   "Members": "Medlemmar",
@@ -647,7 +650,6 @@
   "Revoking": "Återkallar",
   "Are you sure you want to revoke access?": "Är du säker på att du vill återkalla åtkomst?",
   "Delete app": "Ta bort app",
-  "Revision options": "Alternativ för revidering",
   "Share options": "Delningsalternativ",
   "Headings you add to the document will appear here": "Rubriker som du lägger till i dokumentet visas här",
   "Contents": "Innehåll",
@@ -1003,6 +1005,19 @@
   "Authorization URL": "Auktoriserings-URL",
   "Where users are redirected to authorize this app": "Where users are redirected to authorize this app",
   "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.": "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.",
+  "Settings saved": "Inställningarna sparades",
+  "Are you sure?": "Are you sure?",
+  "Removing": "Removing",
+  "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.": "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.",
+  "Manage how members sign-in to your workspace and which authentication providers are enabled.": "Manage how members sign-in to your workspace and which authentication providers are enabled.",
+  "Allow members to sign-in with {{ authProvider }}": "Tillåt medlemmar att logga in med {{ authProvider }}",
+  "Connect {{ authProvider }} to allow members to sign-in": "Connect {{ authProvider }} to allow members to sign-in",
+  "Connected": "Ansluten",
+  "Disabled": "Inaktiverad",
+  "Connect": "Anslut",
+  "Allow members to sign-in using their email address": "Tillåt medlemmar att logga in med sin e-postadress",
+  "The server must have SMTP configured to enable this setting": "Servern måste ha SMTP konfigurerat för att aktivera denna inställning",
+  "Restrictions": "Restrictions",
   "by {{ name }}": "av {{ name }}",
   "Last used": "Senast använd",
   "No expiry": "Ingen utgång",
@@ -1011,7 +1026,6 @@
   "Copied": "Kopierad",
   "Are you sure you want to revoke the {{ tokenName }} token?": "Är du säker på att du vill återkalla {{ tokenName }} -token?",
   "Disconnect integration": "Koppla från integration",
-  "Connected": "Ansluten",
   "Disconnecting": "Bortkopplar",
   "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Är du säker på att du vill koppla från <em>{{ service }}</em>-integrationen?",
   "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
@@ -1082,7 +1096,6 @@
   "You can import a zip file that was previously exported from an Outline installation – collections, documents, and images will be imported. In Outline, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "Du kan importera en zip-fil som tidigare exporterades från en Outline installation – samlingar, dokument och bilder kommer att importeras. Öppna <em>Exportera</em> i sidomenyn Inställningar och klicka på <em>Exportera data</em>.",
   "Drag and drop the zip file from the Markdown export option in {{appName}}, or click to upload": "Dra och släpp zip-filen från markdown-exportalternativet i {{appName}}, eller klicka för att ladda upp",
   "Configure": "Konfigurera",
-  "Connect": "Anslut",
   "Last active": "Senast aktiv",
   "Role": "Roll",
   "Guest": "Gäst",
@@ -1103,7 +1116,6 @@
   "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Vänster",
   "Right": "Höger",
-  "Settings saved": "Inställningarna sparades",
   "Logo updated": "Logotyp uppdaterad",
   "Unable to upload new logo": "Kunde inte ladda upp ny logotyp",
   "Delete workspace": "Ta bort arbetsyta",
@@ -1208,11 +1220,7 @@
   "Are you sure you want to require invites?": "Är du säker på att du vill kräva inbjudningar?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "Nya användare måste först bjudas in för att skapa ett konto. <em>Standardroll</em> och <em>Tillåtna domäner</em> kommer inte längre att gälla.",
   "Settings that impact the access, security, and content of your workspace.": "Inställningar som påverkar åtkomst, säkerhet och innehåll i din arbetsyta.",
-  "Allow members to sign-in with {{ authProvider }}": "Tillåt medlemmar att logga in med {{ authProvider }}",
-  "Disabled": "Inaktiverad",
-  "Allow members to sign-in using their email address": "Tillåt medlemmar att logga in med sin e-postadress",
-  "The server must have SMTP configured to enable this setting": "Servern måste ha SMTP konfigurerat för att aktivera denna inställning",
-  "Access": "Åtkomst",
+  "Invites": "Invites",
   "Allow users to send invites": "Tillåt användare att skicka inbjudningar",
   "Allow editors to invite other people to the workspace": "Tillåt redaktörer att bjuda in andra personer till arbetsytan",
   "Require invites": "Kräv inbjudan",
