--- a/shared/i18n/locales/zh_TW/translation.json
+++ b/shared/i18n/locales/zh_TW/translation.json
@@ -388,6 +388,7 @@
   "Revision deleted": "Revision deleted",
   "Current version": "目前版本",
   "{{userName}} edited": "{{userName}} 已編輯",
+  "Revision options": "修訂版本選項",
   "Results": "結果",
   "No results for {{query}}": "沒有任何匹配 ”{{query}}“ 的搜尋結果",
   "Manage": "管理",
@@ -473,7 +474,7 @@
   "Change permissions?": "變更權限？",
   "{{ documentName }} cannot be moved within {{ parentDocumentName }}": "「{{ documentName }}」無法在「{{ parentDocumentName }}」內移動",
   "You can't reorder documents in an alphabetically sorted collection": "您無法對按字母順序排序的文件集中的文件再重新排序",
-  "The {{ documentName }} cannot be moved here": "「{{ documentName }}」無法移動至此。",
+  "{{ documentName }} cannot be moved here": "{{ documentName }} cannot be moved here",
   "Return to App": "返回",
   "Installation": "安裝",
   "Unstar document": "取消星號",
@@ -554,6 +555,7 @@
   "Italic": "斜體",
   "Sorry, that link won’t work for this embed type": "抱歉，不支援將這個連結嵌入到文件",
   "File attachment": "附加檔案",
+  "Embed PDF": "Embed PDF",
   "Enter a link": "輸入一個連結",
   "Big heading": "大標題",
   "Medium heading": "中標題",
@@ -615,6 +617,7 @@
   "Account": "帳號",
   "API & Apps": "API & Apps",
   "Details": "詳細",
+  "Authentication": "Authentication",
   "Security": "安全性",
   "Features": "功能特色",
   "Members": "成員",
@@ -647,7 +650,6 @@
   "Revoking": "撤銷中",
   "Are you sure you want to revoke access?": "Are you sure you want to revoke access?",
   "Delete app": "Delete app",
-  "Revision options": "修訂版本選項",
   "Share options": "共享設定",
   "Headings you add to the document will appear here": "您在文件中新增的標題會顯示在此",
   "Contents": "目錄",
@@ -1003,6 +1005,19 @@
   "Authorization URL": "Authorization URL",
   "Where users are redirected to authorize this app": "Where users are redirected to authorize this app",
   "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.": "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.",
+  "Settings saved": "設定已儲存",
+  "Are you sure?": "Are you sure?",
+  "Removing": "Removing",
+  "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.": "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.",
+  "Manage how members sign-in to your workspace and which authentication providers are enabled.": "Manage how members sign-in to your workspace and which authentication providers are enabled.",
+  "Allow members to sign-in with {{ authProvider }}": "允許成員使用 {{ authProvider }} 登入",
+  "Connect {{ authProvider }} to allow members to sign-in": "Connect {{ authProvider }} to allow members to sign-in",
+  "Connected": "已連接",
+  "Disabled": "已停用",
+  "Connect": "連結",
+  "Allow members to sign-in using their email address": "允許成員使用他們的電子郵件地址登入",
+  "The server must have SMTP configured to enable this setting": "伺服器必須有已組態的 SMTP 才能啟用此設定",
+  "Restrictions": "Restrictions",
   "by {{ name }}": "来自 {{ name }}",
   "Last used": "最近使用",
   "No expiry": "永久有效",
@@ -1011,7 +1026,6 @@
   "Copied": "已複製",
   "Are you sure you want to revoke the {{ tokenName }} token?": "您確定要撤銷 {{ tokenName }} 權杖嗎？",
   "Disconnect integration": "中斷整合",
-  "Connected": "已連接",
   "Disconnecting": "正在中斷",
   "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
   "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
@@ -1082,7 +1096,6 @@
   "You can import a zip file that was previously exported from an Outline installation – collections, documents, and images will be imported. In Outline, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "你可以輸入自先前其他Outline實例輸出的zip檔案 – 文件集，文件，以及照片都會被匯入。在Outline中，在側邊欄的設定中打開<em>匯出</em>並且選取<em>匯出資料</em>。",
   "Drag and drop the zip file from the Markdown export option in {{appName}}, or click to upload": "請將從 {{appName}} 的 Markdown 匯出選項中匯出的 zip 檔案拖放到此處，或點擊上傳",
   "Configure": "Configure",
-  "Connect": "連結",
   "Last active": "最近一次活動",
   "Role": "角色",
   "Guest": "訪客",
@@ -1103,7 +1116,6 @@
   "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "左",
   "Right": "右",
-  "Settings saved": "設定已儲存",
   "Logo updated": "標誌已更新",
   "Unable to upload new logo": "無法上傳新 Logo",
   "Delete workspace": "刪除工作區",
@@ -1208,11 +1220,7 @@
   "Are you sure you want to require invites?": "您確定您想要獲得邀請嗎？",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "新使用者在創建賬號前需要先被邀請。 <em>預設身份</em> 和 <em>允許使用的域名</em> 都將不再適用。",
   "Settings that impact the access, security, and content of your workspace.": "此處設定將影響您的知識庫存取、安全性、內容。",
-  "Allow members to sign-in with {{ authProvider }}": "允許成員使用 {{ authProvider }} 登入",
-  "Disabled": "已停用",
-  "Allow members to sign-in using their email address": "允許成員使用他們的電子郵件地址登入",
-  "The server must have SMTP configured to enable this setting": "伺服器必須有已組態的 SMTP 才能啟用此設定",
-  "Access": "存取",
+  "Invites": "Invites",
   "Allow users to send invites": "允許使用者發送邀請",
   "Allow editors to invite other people to the workspace": "允許編輯者邀請其他人到工作區",
   "Require invites": "需要被邀請",
