--- a/shared/i18n/locales/cs_CZ/translation.json
+++ b/shared/i18n/locales/cs_CZ/translation.json
@@ -388,6 +388,7 @@
   "Revision deleted": "Revision deleted",
   "Current version": "Aktuální verze",
   "{{userName}} edited": "{{userName}} akutalizoval",
+  "Revision options": "Možnosti revize",
   "Results": "Výsledky",
   "No results for {{query}}": "Žádné výsledky pro {{query}}",
   "Manage": "Spravovat",
@@ -473,7 +474,7 @@
   "Change permissions?": "Změnit práva?",
   "{{ documentName }} cannot be moved within {{ parentDocumentName }}": "{{ documentName }} cannot be moved within {{ parentDocumentName }}",
   "You can't reorder documents in an alphabetically sorted collection": "Nemůžete změnit pořadí dokumentů v abecedně seřazené sbírce",
-  "The {{ documentName }} cannot be moved here": "The {{ documentName }} cannot be moved here",
+  "{{ documentName }} cannot be moved here": "{{ documentName }} cannot be moved here",
   "Return to App": "Zpět do aplikace",
   "Installation": "Instalace",
   "Unstar document": "Odznačit dokument",
@@ -554,6 +555,7 @@
   "Italic": "Kurzíva",
   "Sorry, that link won’t work for this embed type": "Je nám líto, tento odkaz nebude pro tento typ vložení fungovat",
   "File attachment": "Příloha",
+  "Embed PDF": "Embed PDF",
   "Enter a link": "Enter a link",
   "Big heading": "Velký nadpis",
   "Medium heading": "Střední nadpis",
@@ -615,6 +617,7 @@
   "Account": "Účet",
   "API & Apps": "API & Aplikace",
   "Details": "Podrobnosti",
+  "Authentication": "Authentication",
   "Security": "Zabezpečení",
   "Features": "Funkce",
   "Members": "Uživatelé",
@@ -647,7 +650,6 @@
   "Revoking": "Odvolávání",
   "Are you sure you want to revoke access?": "Are you sure you want to revoke access?",
   "Delete app": "Delete app",
-  "Revision options": "Možnosti revize",
   "Share options": "Možnosti sdílení",
   "Headings you add to the document will appear here": "Zde se zobrazí nadpisy, které přidáte do dokumentu",
   "Contents": "Obsah",
@@ -1003,6 +1005,19 @@
   "Authorization URL": "Authorization URL",
   "Where users are redirected to authorize this app": "Where users are redirected to authorize this app",
   "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.": "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.",
+  "Settings saved": "Nastavení uloženo",
+  "Are you sure?": "Are you sure?",
+  "Removing": "Removing",
+  "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.": "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.",
+  "Manage how members sign-in to your workspace and which authentication providers are enabled.": "Manage how members sign-in to your workspace and which authentication providers are enabled.",
+  "Allow members to sign-in with {{ authProvider }}": "Povolit členům přihlásit se pomocí {{ authProvider }}",
+  "Connect {{ authProvider }} to allow members to sign-in": "Connect {{ authProvider }} to allow members to sign-in",
+  "Connected": "Připojeno",
+  "Disabled": "Deaktivováno",
+  "Connect": "Připojit",
+  "Allow members to sign-in using their email address": "Povolit členům přihlášení pomocí jejich e-mailové adresy",
+  "The server must have SMTP configured to enable this setting": "Aby bylo možné toto nastavení povolit, musí mít server nakonfigurován SMTP",
+  "Restrictions": "Restrictions",
   "by {{ name }}": "by {{ name }}",
   "Last used": "Naposledy použito",
   "No expiry": "Bez vypršení platnosti",
@@ -1011,7 +1026,6 @@
   "Copied": "Zkopírováno",
   "Are you sure you want to revoke the {{ tokenName }} token?": "Skutečně chcete zrušit token {{ tokenName }}?",
   "Disconnect integration": "Odebrat integraci",
-  "Connected": "Připojeno",
   "Disconnecting": "Odpojování",
   "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
   "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
@@ -1082,7 +1096,6 @@
   "You can import a zip file that was previously exported from an Outline installation – collections, documents, and images will be imported. In Outline, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "Můžete importovat soubor zip, který byl dříve exportován z instalace Outline – budou importovány sbírky, dokumenty a obrázky. V aplikaci Outline otevřete <em>Export</em> na postranním panelu Nastavení a klikněte na <em>Exportovat data</em>.",
   "Drag and drop the zip file from the Markdown export option in {{appName}}, or click to upload": "Přetáhněte soubor zip z možnosti exportu Markdown z {{appName}} nebo kliknutím nahrajte",
   "Configure": "Configure",
-  "Connect": "Připojit",
   "Last active": "Poslední aktivita",
   "Role": "Role",
   "Guest": "Host",
@@ -1103,7 +1116,6 @@
   "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Vlevo",
   "Right": "Vpravo",
-  "Settings saved": "Nastavení uloženo",
   "Logo updated": "Logo aktualizováno",
   "Unable to upload new logo": "Nelze nahrát nové logo",
   "Delete workspace": "Odstranit pracovní prostor",
@@ -1208,11 +1220,7 @@
   "Are you sure you want to require invites?": "Opravdu chcete vyžadovat pozvánky?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "K vytvoření účtu bude nutné nejprve pozvat nové uživatele. <em>Výchozí role</em> a <em>Povolené domény</em> již nebudou platit.",
   "Settings that impact the access, security, and content of your workspace.": "Nastavení ovlivňující přístup, bezpečnost a obsah vašeho pracovního prostoru.",
-  "Allow members to sign-in with {{ authProvider }}": "Povolit členům přihlásit se pomocí {{ authProvider }}",
-  "Disabled": "Deaktivováno",
-  "Allow members to sign-in using their email address": "Povolit členům přihlášení pomocí jejich e-mailové adresy",
-  "The server must have SMTP configured to enable this setting": "Aby bylo možné toto nastavení povolit, musí mít server nakonfigurován SMTP",
-  "Access": "Přístup",
+  "Invites": "Invites",
   "Allow users to send invites": "Povolit uživatelům posílat pozvánky",
   "Allow editors to invite other people to the workspace": "Povolit editorům posílat pozvánky do pracoviště",
   "Require invites": "Vyžadovat pozvání",
