--- a/shared/i18n/locales/hu_HU/translation.json
+++ b/shared/i18n/locales/hu_HU/translation.json
@@ -388,6 +388,7 @@
   "Revision deleted": "A módosítás törölve lett",
   "Current version": "Jelenlegi verzió",
   "{{userName}} edited": "{{userName}} módosította",
+  "Revision options": "Revízió beállítások",
   "Results": "Eredmények",
   "No results for {{query}}": "Nincs találat: {{query}}",
   "Manage": "Kezelés",
@@ -473,7 +474,7 @@
   "Change permissions?": "Engedélyek módosítása?",
   "{{ documentName }} cannot be moved within {{ parentDocumentName }}": "{{ documentName }} cannot be moved within {{ parentDocumentName }}",
   "You can't reorder documents in an alphabetically sorted collection": "Nem tudja egy ABC szerint rendezett gyűjtemény elemeinek sorrendjét megváltoztatni",
-  "The {{ documentName }} cannot be moved here": "The {{ documentName }} cannot be moved here",
+  "{{ documentName }} cannot be moved here": "{{ documentName }} cannot be moved here",
   "Return to App": "Vissza az alkalmazáshoz",
   "Installation": "Telepítés",
   "Unstar document": "Dokumentum csillagozásának törlése",
@@ -554,6 +555,7 @@
   "Italic": "Dőlt",
   "Sorry, that link won’t work for this embed type": "Sajnálom, ez a hivatkozás nem működik ennél a beágyazott típusnál",
   "File attachment": "Fájlmelléklet",
+  "Embed PDF": "Embed PDF",
   "Enter a link": "Enter a link",
   "Big heading": "Nagy címsor",
   "Medium heading": "Közepes címsor",
@@ -615,6 +617,7 @@
   "Account": "Fiók",
   "API & Apps": "API és alkalmazások",
   "Details": "Megjelenés",
+  "Authentication": "Authentication",
   "Security": "Biztonság",
   "Features": "Funkciók",
   "Members": "Tagok",
@@ -647,7 +650,6 @@
   "Revoking": "Revoking",
   "Are you sure you want to revoke access?": "Are you sure you want to revoke access?",
   "Delete app": "Delete app",
-  "Revision options": "Revízió beállítások",
   "Share options": "Megosztási beállítások",
   "Headings you add to the document will appear here": "A dokumentumhoz hozzáadott címsorok itt jelennek meg",
   "Contents": "Tartalom",
@@ -1003,6 +1005,19 @@
   "Authorization URL": "Authorization URL",
   "Where users are redirected to authorize this app": "Where users are redirected to authorize this app",
   "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.": "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.",
+  "Settings saved": "Beállítások elmentve",
+  "Are you sure?": "Are you sure?",
+  "Removing": "Removing",
+  "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.": "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.",
+  "Manage how members sign-in to your workspace and which authentication providers are enabled.": "Manage how members sign-in to your workspace and which authentication providers are enabled.",
+  "Allow members to sign-in with {{ authProvider }}": "Allow members to sign-in with {{ authProvider }}",
+  "Connect {{ authProvider }} to allow members to sign-in": "Connect {{ authProvider }} to allow members to sign-in",
+  "Connected": "Connected",
+  "Disabled": "Disabled",
+  "Connect": "Connect",
+  "Allow members to sign-in using their email address": "Allow members to sign-in using their email address",
+  "The server must have SMTP configured to enable this setting": "The server must have SMTP configured to enable this setting",
+  "Restrictions": "Restrictions",
   "by {{ name }}": "by {{ name }}",
   "Last used": "Last used",
   "No expiry": "No expiry",
@@ -1011,7 +1026,6 @@
   "Copied": "Copied",
   "Are you sure you want to revoke the {{ tokenName }} token?": "Are you sure you want to revoke the {{ tokenName }} token?",
   "Disconnect integration": "Disconnect integration",
-  "Connected": "Connected",
   "Disconnecting": "Kapcsolat megszakítása",
   "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Biztos vagy benne, hogy le akarod választani a {{ service }} integrációt?",
   "This will stop sending analytics events to the configured instance.": "Ez megállítja az analitikai események küldését a beállított fogadónak.",
@@ -1082,7 +1096,6 @@
   "You can import a zip file that was previously exported from an Outline installation – collections, documents, and images will be imported. In Outline, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "You can import a zip file that was previously exported from an Outline installation – collections, documents, and images will be imported. In Outline, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.",
   "Drag and drop the zip file from the Markdown export option in {{appName}}, or click to upload": "Drag and drop the zip file from the Markdown export option in {{appName}}, or click to upload",
   "Configure": "Configure",
-  "Connect": "Connect",
   "Last active": "Utoljára aktív",
   "Role": "Szerep",
   "Guest": "Vendég",
@@ -1103,7 +1116,6 @@
   "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Left",
   "Right": "Right",
-  "Settings saved": "Beállítások elmentve",
   "Logo updated": "Logo updated",
   "Unable to upload new logo": "Nem lehet új logót feltölteni",
   "Delete workspace": "Delete workspace",
@@ -1208,11 +1220,7 @@
   "Are you sure you want to require invites?": "Are you sure you want to require invites?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.",
   "Settings that impact the access, security, and content of your workspace.": "Settings that impact the access, security, and content of your workspace.",
-  "Allow members to sign-in with {{ authProvider }}": "Allow members to sign-in with {{ authProvider }}",
-  "Disabled": "Disabled",
-  "Allow members to sign-in using their email address": "Allow members to sign-in using their email address",
-  "The server must have SMTP configured to enable this setting": "The server must have SMTP configured to enable this setting",
-  "Access": "Access",
+  "Invites": "Invites",
   "Allow users to send invites": "Allow users to send invites",
   "Allow editors to invite other people to the workspace": "Allow editors to invite other people to the workspace",
   "Require invites": "Require invites",
