--- a/shared/i18n/locales/id_ID/translation.json
+++ b/shared/i18n/locales/id_ID/translation.json
@@ -388,6 +388,7 @@
   "Revision deleted": "Revision deleted",
   "Current version": "Current version",
   "{{userName}} edited": "{{userName}} menyunting",
+  "Revision options": "Opsi revisi",
   "Results": "Hasil",
   "No results for {{query}}": "Tak ada hasil untuk {{query}}",
   "Manage": "Manage",
@@ -473,7 +474,7 @@
   "Change permissions?": "Change permissions?",
   "{{ documentName }} cannot be moved within {{ parentDocumentName }}": "{{ documentName }} cannot be moved within {{ parentDocumentName }}",
   "You can't reorder documents in an alphabetically sorted collection": "Anda tidak dapat menyusun ulang dokumen dalam koleksi yang diurutkan menurut abjad",
-  "The {{ documentName }} cannot be moved here": "The {{ documentName }} cannot be moved here",
+  "{{ documentName }} cannot be moved here": "{{ documentName }} cannot be moved here",
   "Return to App": "Kembali ke Aplikasi",
   "Installation": "Pemasangan",
   "Unstar document": "Unstar document",
@@ -554,6 +555,7 @@
   "Italic": "Miring",
   "Sorry, that link won’t work for this embed type": "Maaf, tautan itu tidak berfungsi untuk jenis embed ini",
   "File attachment": "Lampiran berkas",
+  "Embed PDF": "Embed PDF",
   "Enter a link": "Enter a link",
   "Big heading": "Judul besar",
   "Medium heading": "Judul sedang",
@@ -615,6 +617,7 @@
   "Account": "Akun",
   "API & Apps": "API & Apps",
   "Details": "Rincian",
+  "Authentication": "Authentication",
   "Security": "Keamanan",
   "Features": "Fitur",
   "Members": "Anggota",
@@ -647,7 +650,6 @@
   "Revoking": "Mencabut",
   "Are you sure you want to revoke access?": "Are you sure you want to revoke access?",
   "Delete app": "Delete app",
-  "Revision options": "Opsi revisi",
   "Share options": "Opsi bagikan",
   "Headings you add to the document will appear here": "Judul yang Anda tambahkan ke dokumen akan muncul di sini",
   "Contents": "Isi",
@@ -1003,6 +1005,19 @@
   "Authorization URL": "Authorization URL",
   "Where users are redirected to authorize this app": "Where users are redirected to authorize this app",
   "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.": "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.",
+  "Settings saved": "Pengaturan disimpan",
+  "Are you sure?": "Are you sure?",
+  "Removing": "Removing",
+  "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.": "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.",
+  "Manage how members sign-in to your workspace and which authentication providers are enabled.": "Manage how members sign-in to your workspace and which authentication providers are enabled.",
+  "Allow members to sign-in with {{ authProvider }}": "Izinkan anggota untuk masuk dengan {{ authProvider }}",
+  "Connect {{ authProvider }} to allow members to sign-in": "Connect {{ authProvider }} to allow members to sign-in",
+  "Connected": "Terhubung",
+  "Disabled": "Dinonaktifkan",
+  "Connect": "Hubungkan",
+  "Allow members to sign-in using their email address": "Izinkan anggota untuk masuk menggunakan alamat email mereka",
+  "The server must have SMTP configured to enable this setting": "Server harus memiliki konfigurasi SMTP untuk mengaktifkan setelan ini",
+  "Restrictions": "Restrictions",
   "by {{ name }}": "by {{ name }}",
   "Last used": "Last used",
   "No expiry": "No expiry",
@@ -1011,7 +1026,6 @@
   "Copied": "Disalin",
   "Are you sure you want to revoke the {{ tokenName }} token?": "Apakah Anda yakin ingin mencabut token {{ tokenName }}?",
   "Disconnect integration": "Disconnect integration",
-  "Connected": "Terhubung",
   "Disconnecting": "Disconnecting",
   "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
   "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
@@ -1082,7 +1096,6 @@
   "You can import a zip file that was previously exported from an Outline installation – collections, documents, and images will be imported. In Outline, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "Anda dapat mengimpor file zip yang sebelumnya diekspor dari penginstalan Outline – koleksi, dokumen, dan gambar akan diimpor. Di Outline, buka <em>Export</em> di sidebar Settings dan klik <em>Export Data</em>.",
   "Drag and drop the zip file from the Markdown export option in {{appName}}, or click to upload": "Drag and drop file zip dari opsi Markdown export di {{appName}}, atau klik untuk mengunggah",
   "Configure": "Configure",
-  "Connect": "Hubungkan",
   "Last active": "Terakhir aktif",
   "Role": "Peran",
   "Guest": "Guest",
@@ -1103,7 +1116,6 @@
   "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Left",
   "Right": "Right",
-  "Settings saved": "Pengaturan disimpan",
   "Logo updated": "Logo diperbarui",
   "Unable to upload new logo": "Tidak dapat mengunggah logo baru",
   "Delete workspace": "Delete workspace",
@@ -1208,11 +1220,7 @@
   "Are you sure you want to require invites?": "Anda yakin ingin mewajibkan undangan?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "Pengguna baru pertama-tama harus diundang untuk membuat akun. <em>Peran default</em> dan <em>Domain yang diizinkan</em> tidak akan berlaku lagi.",
   "Settings that impact the access, security, and content of your workspace.": "Settings that impact the access, security, and content of your workspace.",
-  "Allow members to sign-in with {{ authProvider }}": "Izinkan anggota untuk masuk dengan {{ authProvider }}",
-  "Disabled": "Dinonaktifkan",
-  "Allow members to sign-in using their email address": "Izinkan anggota untuk masuk menggunakan alamat email mereka",
-  "The server must have SMTP configured to enable this setting": "Server harus memiliki konfigurasi SMTP untuk mengaktifkan setelan ini",
-  "Access": "Akses",
+  "Invites": "Invites",
   "Allow users to send invites": "Allow users to send invites",
   "Allow editors to invite other people to the workspace": "Allow editors to invite other people to the workspace",
   "Require invites": "Memerlukan undangan",
