--- a/shared/i18n/locales/ja_JP/translation.json
+++ b/shared/i18n/locales/ja_JP/translation.json
@@ -388,6 +388,7 @@
   "Revision deleted": "Revision deleted",
   "Current version": "現在のバージョン",
   "{{userName}} edited": "{{userName}} が編集しました",
+  "Revision options": "改訂オプション",
   "Results": "検索結果",
   "No results for {{query}}": "{{query}} に該当する検索結果はありませんでした",
   "Manage": "管理者",
@@ -473,7 +474,7 @@
   "Change permissions?": "権限を変更しますか？",
   "{{ documentName }} cannot be moved within {{ parentDocumentName }}": "{{ documentName }} は {{ parentDocumentName }} 以内には移動できません",
   "You can't reorder documents in an alphabetically sorted collection": "五十音順で並べられたコレクション内のドキュメントは、並べ替えができません。",
-  "The {{ documentName }} cannot be moved here": "{{ documentName }} はここに移動できません",
+  "{{ documentName }} cannot be moved here": "{{ documentName }} cannot be moved here",
   "Return to App": "アプリに戻る",
   "Installation": "インストール",
   "Unstar document": "お気に入りから削除",
@@ -554,6 +555,7 @@
   "Italic": "斜体",
   "Sorry, that link won’t work for this embed type": "この埋め込みではリンクが機能しません",
   "File attachment": "ファイル添付",
+  "Embed PDF": "Embed PDF",
   "Enter a link": "リンクを入力",
   "Big heading": "見出し1",
   "Medium heading": "見出し2",
@@ -615,6 +617,7 @@
   "Account": "アカウント",
   "API & Apps": "API & Apps",
   "Details": "詳細情報",
+  "Authentication": "Authentication",
   "Security": "セキュリティ",
   "Features": "機能",
   "Members": "メンバー",
@@ -647,7 +650,6 @@
   "Revoking": "無効化しています",
   "Are you sure you want to revoke access?": "Are you sure you want to revoke access?",
   "Delete app": "Delete app",
-  "Revision options": "改訂オプション",
   "Share options": "共有オプション",
   "Headings you add to the document will appear here": "ドキュメントに追加した見出しがここに表示されます",
   "Contents": "目次",
@@ -1003,6 +1005,19 @@
   "Authorization URL": "Authorization URL",
   "Where users are redirected to authorize this app": "Where users are redirected to authorize this app",
   "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.": "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.",
+  "Settings saved": "設定が保存されました",
+  "Are you sure?": "Are you sure?",
+  "Removing": "Removing",
+  "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.": "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.",
+  "Manage how members sign-in to your workspace and which authentication providers are enabled.": "Manage how members sign-in to your workspace and which authentication providers are enabled.",
+  "Allow members to sign-in with {{ authProvider }}": "メンバーが {{ authProvider }} でログインできるようにする",
+  "Connect {{ authProvider }} to allow members to sign-in": "Connect {{ authProvider }} to allow members to sign-in",
+  "Connected": "接続されました",
+  "Disabled": "無効化済み",
+  "Connect": "接続",
+  "Allow members to sign-in using their email address": "メンバーが自分のメール アドレスを使用してログインできるようにする",
+  "The server must have SMTP configured to enable this setting": "この設定を有効にするには、サーバーに SMTP が設定されている必要があります。",
+  "Restrictions": "Restrictions",
   "by {{ name }}": "{{ name }}",
   "Last used": "最終使用日",
   "No expiry": "無期限",
@@ -1011,7 +1026,6 @@
   "Copied": "コピーしました",
   "Are you sure you want to revoke the {{ tokenName }} token?": "トークン {{ tokenName }} を失効します\nよろしいですか？",
   "Disconnect integration": "連携を解除",
-  "Connected": "接続されました",
   "Disconnecting": "切断中",
   "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
   "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
@@ -1082,7 +1096,6 @@
   "You can import a zip file that was previously exported from an Outline installation – collections, documents, and images will be imported. In Outline, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "以前、 Outline からエクスポートされた zip ファイルをインポートできます。コレクション、ドキュメント、および画像がインポートされます。 設定から、 <em>エクスポート画面</em> を開き、 <em>データのエクスポート</em>をクリックします。",
   "Drag and drop the zip file from the Markdown export option in {{appName}}, or click to upload": "{{appName}} の Markdown エクスポートオプションから zip ファイルをドラッグ&ドロップするか、クリックしてアップロードします",
   "Configure": "Configure",
-  "Connect": "接続",
   "Last active": "最終ログイン",
   "Role": "ロール",
   "Guest": "ゲスト",
@@ -1103,7 +1116,6 @@
   "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "左",
   "Right": "右",
-  "Settings saved": "設定が保存されました",
   "Logo updated": "ロゴが更新されました",
   "Unable to upload new logo": "ロゴをアップロードできませんでした",
   "Delete workspace": "ワークスペースを削除",
@@ -1208,11 +1220,7 @@
   "Are you sure you want to require invites?": "招待を要求してもよろしいですか？",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "新しいユーザーは、アカウントを作成するために招待される必要があります。 <em>デフォルトのロール</em> および <em>許可されたドメイン</em> は適用されなくなります。",
   "Settings that impact the access, security, and content of your workspace.": "ワークスペースのアクセス、セキュリティ、およびコンテンツに影響する設定。",
-  "Allow members to sign-in with {{ authProvider }}": "メンバーが {{ authProvider }} でログインできるようにする",
-  "Disabled": "無効化済み",
-  "Allow members to sign-in using their email address": "メンバーが自分のメール アドレスを使用してログインできるようにする",
-  "The server must have SMTP configured to enable this setting": "この設定を有効にするには、サーバーに SMTP が設定されている必要があります。",
-  "Access": "アクセス",
+  "Invites": "Invites",
   "Allow users to send invites": "ユーザーが招待を送信できるようにする",
   "Allow editors to invite other people to the workspace": "編集者が他の人をワークスペースに招待できるようにする",
   "Require invites": "招待が必要",
