--- a/shared/i18n/locales/pt_BR/translation.json
+++ b/shared/i18n/locales/pt_BR/translation.json
@@ -388,6 +388,7 @@
   "Revision deleted": "Revisão excluída",
   "Current version": "Versão atual",
   "{{userName}} edited": "{{userName}} editou",
+  "Revision options": "Opções de revisão",
   "Results": "Resultados",
   "No results for {{query}}": "Sem resultados para {{query}}",
   "Manage": "Gerenciar",
@@ -473,7 +474,7 @@
   "Change permissions?": "Alterar permissões?",
   "{{ documentName }} cannot be moved within {{ parentDocumentName }}": "{{ documentName }} não pode ser movido dentro de {{ parentDocumentName }}",
   "You can't reorder documents in an alphabetically sorted collection": "Não é possível reordenar documentos em uma coleção ordenada alfabeticamente",
-  "The {{ documentName }} cannot be moved here": "O {{ documentName }} não pode ser movido para aqui",
+  "{{ documentName }} cannot be moved here": "{{ documentName }} cannot be moved here",
   "Return to App": "Voltar ao aplicativo",
   "Installation": "Instalação",
   "Unstar document": "Desfavoritar documento",
@@ -554,6 +555,7 @@
   "Italic": "Itálico",
   "Sorry, that link won’t work for this embed type": "Desculpe, esse link não funcionará para este tipo de incorporação",
   "File attachment": "Arquivo anexo",
+  "Embed PDF": "Embed PDF",
   "Enter a link": "Insira um link",
   "Big heading": "Cabeçalho grande",
   "Medium heading": "Cabeçalho médio",
@@ -615,6 +617,7 @@
   "Account": "Conta",
   "API & Apps": "API & Aplicativos",
   "Details": "Detalhes",
+  "Authentication": "Authentication",
   "Security": "Segurança",
   "Features": "Funcionalidades",
   "Members": "Membros",
@@ -647,7 +650,6 @@
   "Revoking": "Revogando",
   "Are you sure you want to revoke access?": "Tem certeza de que deseja revogar o acesso?",
   "Delete app": "Excluir aplicativo",
-  "Revision options": "Opções de revisão",
   "Share options": "Opções de compartilhamento",
   "Headings you add to the document will appear here": "Os cabeçalhos que você adicionar ao documento aparecerão aqui",
   "Contents": "Conteúdo",
@@ -1003,6 +1005,19 @@
   "Authorization URL": "URL de Autorização",
   "Where users are redirected to authorize this app": "Onde os usuários serão redirecionados para autorizar este aplicativo",
   "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.": "Aplicações permitem que você crie integrações internas ou públicas com o Outline e forneça acesso seguro via OAuth. Para obter mais detalhes, consulte a <em>documentação para desenvolvedores</em>.",
+  "Settings saved": "Configurações salvas",
+  "Are you sure?": "Are you sure?",
+  "Removing": "Removing",
+  "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.": "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.",
+  "Manage how members sign-in to your workspace and which authentication providers are enabled.": "Manage how members sign-in to your workspace and which authentication providers are enabled.",
+  "Allow members to sign-in with {{ authProvider }}": "Permitir que membros façam login com {{ authProvider }}",
+  "Connect {{ authProvider }} to allow members to sign-in": "Connect {{ authProvider }} to allow members to sign-in",
+  "Connected": "Conectado",
+  "Disabled": "Desabilitado",
+  "Connect": "Conectar",
+  "Allow members to sign-in using their email address": "Permitir que membros façam login usando endereço de e-mail",
+  "The server must have SMTP configured to enable this setting": "O servidor deve ter o SMTP configurado para habilitar esta configuração",
+  "Restrictions": "Restrictions",
   "by {{ name }}": "por {{ name }}",
   "Last used": "Última utilização",
   "No expiry": "Não expira",
@@ -1011,7 +1026,6 @@
   "Copied": "Copiado",
   "Are you sure you want to revoke the {{ tokenName }} token?": "Tem certeza de que deseja revogar a chave de api {{ tokenName }}?",
   "Disconnect integration": "Desconectar integração",
-  "Connected": "Conectado",
   "Disconnecting": "Desconectando",
   "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Você realmente deseja desconectar a integração <em>{{ service }}</em>?",
   "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
@@ -1082,7 +1096,6 @@
   "You can import a zip file that was previously exported from an Outline installation – collections, documents, and images will be imported. In Outline, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "Você pode importar um arquivo zip que foi exportado anteriormente de uma instalação do Outline – coleções, documentos e imagens serão importados. No Outline, abra <em>Exportar</em> na barra lateral de Configurações e clique em <em>Exportar Dados</em>.",
   "Drag and drop the zip file from the Markdown export option in {{appName}}, or click to upload": "Arraste e solte o arquivo zip da opção de exportação Markdown em {{appName}}, ou clique para realizar o upload",
   "Configure": "Configurar",
-  "Connect": "Conectar",
   "Last active": "Última atividade",
   "Role": "Função",
   "Guest": "Visitante",
@@ -1103,7 +1116,6 @@
   "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Esquerda",
   "Right": "Direita",
-  "Settings saved": "Configurações salvas",
   "Logo updated": "Logo atualizado",
   "Unable to upload new logo": "Não foi possível carregar o novo logotipo",
   "Delete workspace": "Excluir espaço de trabalho",
@@ -1208,11 +1220,7 @@
   "Are you sure you want to require invites?": "Tem certeza de que deseja exigir convites?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "Novos usuários precisarão primeiro ser convidados para criar uma conta. <em>Função padrão</em> e <em>Os domínios permitidos</em> não serão mais aplicáveis.",
   "Settings that impact the access, security, and content of your workspace.": "Configurações que afetam o acesso, a segurança e o conteúdo do seu espaço de trabalho.",
-  "Allow members to sign-in with {{ authProvider }}": "Permitir que membros façam login com {{ authProvider }}",
-  "Disabled": "Desabilitado",
-  "Allow members to sign-in using their email address": "Permitir que membros façam login usando endereço de e-mail",
-  "The server must have SMTP configured to enable this setting": "O servidor deve ter o SMTP configurado para habilitar esta configuração",
-  "Access": "Acessos",
+  "Invites": "Invites",
   "Allow users to send invites": "Permitir aos usuários enviarem convites",
   "Allow editors to invite other people to the workspace": "Permitir que editores convidem outras pessoas para o espaço de trabalho",
   "Require invites": "Exigir convites",
