--- a/shared/i18n/locales/pt_PT/translation.json
+++ b/shared/i18n/locales/pt_PT/translation.json
@@ -388,6 +388,7 @@
   "Revision deleted": "Revision deleted",
   "Current version": "Versão atual",
   "{{userName}} edited": "{{userName}} editado",
+  "Revision options": "Opções de revisão",
   "Results": "Resultados",
   "No results for {{query}}": "Sem resultados para {{query}}",
   "Manage": "Gerir",
@@ -473,7 +474,7 @@
   "Change permissions?": "Change permissions?",
   "{{ documentName }} cannot be moved within {{ parentDocumentName }}": "{{ documentName }} cannot be moved within {{ parentDocumentName }}",
   "You can't reorder documents in an alphabetically sorted collection": "Não pode reordenar documentos numa coleção ordenada alfabeticamente",
-  "The {{ documentName }} cannot be moved here": "The {{ documentName }} cannot be moved here",
+  "{{ documentName }} cannot be moved here": "{{ documentName }} cannot be moved here",
   "Return to App": "Voltar à Aplicação",
   "Installation": "Instalação",
   "Unstar document": "Desmarcar documento",
@@ -554,6 +555,7 @@
   "Italic": "Itálico",
   "Sorry, that link won’t work for this embed type": "Desculpe, esse link não funcionará para este tipo de incorporação",
   "File attachment": "Anexo",
+  "Embed PDF": "Embed PDF",
   "Enter a link": "Enter a link",
   "Big heading": "Cabeçalho grande",
   "Medium heading": "Cabeçalho médio",
@@ -615,6 +617,7 @@
   "Account": "Conta",
   "API & Apps": "API & Apps",
   "Details": "Detalhes",
+  "Authentication": "Authentication",
   "Security": "Segurança",
   "Features": "Funcionalidades",
   "Members": "Membros",
@@ -647,7 +650,6 @@
   "Revoking": "A revogar",
   "Are you sure you want to revoke access?": "Are you sure you want to revoke access?",
   "Delete app": "Delete app",
-  "Revision options": "Opções de revisão",
   "Share options": "Opções de partilha",
   "Headings you add to the document will appear here": "Cabeçalhos que adicionar ao documento aparecerão aqui",
   "Contents": "Conteúdo",
@@ -1003,6 +1005,19 @@
   "Authorization URL": "Authorization URL",
   "Where users are redirected to authorize this app": "Where users are redirected to authorize this app",
   "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.": "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.",
+  "Settings saved": "Configurações guardadas",
+  "Are you sure?": "Are you sure?",
+  "Removing": "Removing",
+  "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.": "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.",
+  "Manage how members sign-in to your workspace and which authentication providers are enabled.": "Manage how members sign-in to your workspace and which authentication providers are enabled.",
+  "Allow members to sign-in with {{ authProvider }}": "Permitir que membros se autentiquem com {{authProvider}}",
+  "Connect {{ authProvider }} to allow members to sign-in": "Connect {{ authProvider }} to allow members to sign-in",
+  "Connected": "Ligado",
+  "Disabled": "Inativo",
+  "Connect": "Ligado",
+  "Allow members to sign-in using their email address": "Permitir que membros entrem com endereço de email",
+  "The server must have SMTP configured to enable this setting": "O servidor requer SMTP configurado para habilitar esta configuração",
+  "Restrictions": "Restrictions",
   "by {{ name }}": "by {{ name }}",
   "Last used": "Última utilização",
   "No expiry": "Sem expiração",
@@ -1011,7 +1026,6 @@
   "Copied": "Copiado",
   "Are you sure you want to revoke the {{ tokenName }} token?": "Tem certeza que quer revogar o token {{ tokenName }}?",
   "Disconnect integration": "Desligar integração",
-  "Connected": "Ligado",
   "Disconnecting": "A desligar",
   "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
   "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
@@ -1082,7 +1096,6 @@
   "You can import a zip file that was previously exported from an Outline installation – collections, documents, and images will be imported. In Outline, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "Pode importar um arquivo ZIP que foi exportado anteriormente a partir de uma instalação de Outline — coleções, documentos e imagens serão importadas. No Outline, abra <em>Exportar</em> na barra lateral de Configurações e clique em <em>Exportar Dados</em>.",
   "Drag and drop the zip file from the Markdown export option in {{appName}}, or click to upload": "Arraste e solte o arquivo ZIP da opção de exportação Markdown em {{appName}}, ou clique para carregar",
   "Configure": "Configure",
-  "Connect": "Ligado",
   "Last active": "Última atividade",
   "Role": "Papel",
   "Guest": "Convidado",
@@ -1103,7 +1116,6 @@
   "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Esquerda",
   "Right": "Direita",
-  "Settings saved": "Configurações guardadas",
   "Logo updated": "Logotipo atualizado",
   "Unable to upload new logo": "Não foi possível carregar o novo logotipo",
   "Delete workspace": "Eliminar área de trabalho",
@@ -1208,11 +1220,7 @@
   "Are you sure you want to require invites?": "Tem certeza que quer requisitar os convites?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "Novos utilizadores terão de ser convidados para que criem conta. <em>Papel por defeito</em> e <em>domínios permitidos</em> não se aplicam.",
   "Settings that impact the access, security, and content of your workspace.": "Configurações que impactam acesso, segurança e conteúdo da sua área de trabalho.",
-  "Allow members to sign-in with {{ authProvider }}": "Permitir que membros se autentiquem com {{authProvider}}",
-  "Disabled": "Inativo",
-  "Allow members to sign-in using their email address": "Permitir que membros entrem com endereço de email",
-  "The server must have SMTP configured to enable this setting": "O servidor requer SMTP configurado para habilitar esta configuração",
-  "Access": "Acesso",
+  "Invites": "Invites",
   "Allow users to send invites": "Permitir que utilizadores enviem convites",
   "Allow editors to invite other people to the workspace": "Permitir que editores convidem outros utilizadores para a área de trabalho",
   "Require invites": "Requerer convites",
