--- a/shared/i18n/locales/uk_UA/translation.json
+++ b/shared/i18n/locales/uk_UA/translation.json
@@ -388,6 +388,7 @@
   "Revision deleted": "Версія видалена",
   "Current version": "Поточна версія",
   "{{userName}} edited": "{{userName}} відредаговано",
+  "Revision options": "Варіанти перегляду",
   "Results": "Результати",
   "No results for {{query}}": "За запитом \"{{query}}\" нічого не знайдено :(",
   "Manage": "Керування",
@@ -473,7 +474,7 @@
   "Change permissions?": "Змінити права доступу?",
   "{{ documentName }} cannot be moved within {{ parentDocumentName }}": "{{ documentName }} cannot be moved within {{ parentDocumentName }}",
   "You can't reorder documents in an alphabetically sorted collection": "Ви не можете змінити порядок документів у колекції, яка відсортована за алфавітом",
-  "The {{ documentName }} cannot be moved here": "The {{ documentName }} cannot be moved here",
+  "{{ documentName }} cannot be moved here": "{{ documentName }} cannot be moved here",
   "Return to App": "Назад до програми",
   "Installation": "Встановлення",
   "Unstar document": "Видалити з обраного",
@@ -554,6 +555,7 @@
   "Italic": "Курсив",
   "Sorry, that link won’t work for this embed type": "На жаль, це посилання не працюватиме для цього типу вставлення",
   "File attachment": "Вкладений файл",
+  "Embed PDF": "Embed PDF",
   "Enter a link": "Ввести посилання",
   "Big heading": "Великий заголовок",
   "Medium heading": "Середній заголовок",
@@ -615,6 +617,7 @@
   "Account": "Обліковий запис",
   "API & Apps": "API та додатки",
   "Details": "Деталі",
+  "Authentication": "Authentication",
   "Security": "Безпека",
   "Features": "Фічі",
   "Members": "Учасники",
@@ -647,7 +650,6 @@
   "Revoking": "Анулювання",
   "Are you sure you want to revoke access?": "Ви впевнені, що бажаєте скасувати доступ?",
   "Delete app": "Видалити додаток",
-  "Revision options": "Варіанти перегляду",
   "Share options": "Параметри спільного використання",
   "Headings you add to the document will appear here": "Тут з’являться заголовки, які ви додасте до документа",
   "Contents": "Зміст",
@@ -1003,6 +1005,19 @@
   "Authorization URL": "Authorization URL",
   "Where users are redirected to authorize this app": "Where users are redirected to authorize this app",
   "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.": "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.",
+  "Settings saved": "Налаштування збережено",
+  "Are you sure?": "Are you sure?",
+  "Removing": "Removing",
+  "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.": "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.",
+  "Manage how members sign-in to your workspace and which authentication providers are enabled.": "Manage how members sign-in to your workspace and which authentication providers are enabled.",
+  "Allow members to sign-in with {{ authProvider }}": "Дозволити учасникам входити за допомогою {{ authProvider }}",
+  "Connect {{ authProvider }} to allow members to sign-in": "Connect {{ authProvider }} to allow members to sign-in",
+  "Connected": "Підключено",
+  "Disabled": "Вимкнено",
+  "Connect": "Під’єднатися",
+  "Allow members to sign-in using their email address": "Дозволити учасникам входити, використовуючи свою адресу електронної пошти",
+  "The server must have SMTP configured to enable this setting": "Щоб активувати цей параметр, на сервері має бути налаштований SMTP",
+  "Restrictions": "Restrictions",
   "by {{ name }}": "by {{ name }}",
   "Last used": "Last used",
   "No expiry": "No expiry",
@@ -1011,7 +1026,6 @@
   "Copied": "Скопійовано",
   "Are you sure you want to revoke the {{ tokenName }} token?": "Ви впевнені, що хочете відкликати {{ tokenName }}  токен?",
   "Disconnect integration": "Disconnect integration",
-  "Connected": "Підключено",
   "Disconnecting": "Disconnecting",
   "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
   "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
@@ -1082,7 +1096,6 @@
   "You can import a zip file that was previously exported from an Outline installation – collections, documents, and images will be imported. In Outline, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "Ви можете імпортувати zip-файл, який раніше було експортовано з інсталяції Outline – колекції, документи та зображення будуть імпортовані. У Outline відкрийте <em>Експорт</em> на бічній панелі налаштувань і натисніть <em>Експортувати Дані</em>.",
   "Drag and drop the zip file from the Markdown export option in {{appName}}, or click to upload": "Перетягніть zip-файл з опції експорту Markdown в {{appName}} або натисніть щоб завантажити",
   "Configure": "Налаштувати",
-  "Connect": "Під’єднатися",
   "Last active": "Остання активність",
   "Role": "Роль",
   "Guest": "Гість",
@@ -1103,7 +1116,6 @@
   "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Користувацькі емодзі можуть бути використані в усіх ваших робочих областях для документів, коментарів та реакцій.",
   "Left": "Зліва",
   "Right": "Справа",
-  "Settings saved": "Налаштування збережено",
   "Logo updated": "Логотип оновлено",
   "Unable to upload new logo": "Не вдалося завантажити новий логотип",
   "Delete workspace": "Видалити робочий простір",
@@ -1208,11 +1220,7 @@
   "Are you sure you want to require invites?": "Ви впевнені, що хочете вимагати запрошень?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "Нових користувачів спочатку потрібно буде запросити для створення облікового запису. <em>Роль за замовчуванням</em> і <em>Дозволені домени</em> більше не застосовуватимуться.",
   "Settings that impact the access, security, and content of your workspace.": "Settings that impact the access, security, and content of your workspace.",
-  "Allow members to sign-in with {{ authProvider }}": "Дозволити учасникам входити за допомогою {{ authProvider }}",
-  "Disabled": "Вимкнено",
-  "Allow members to sign-in using their email address": "Дозволити учасникам входити, використовуючи свою адресу електронної пошти",
-  "The server must have SMTP configured to enable this setting": "Щоб активувати цей параметр, на сервері має бути налаштований SMTP",
-  "Access": "Доступ",
+  "Invites": "Invites",
   "Allow users to send invites": "Allow users to send invites",
   "Allow editors to invite other people to the workspace": "Allow editors to invite other people to the workspace",
   "Require invites": "Вимагати запрошення",
