--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -388,6 +388,7 @@
   "Revision deleted": "修订已被删除",
   "Current version": "当前版本",
   "{{userName}} edited": "{{userName}} 已编辑",
+  "Revision options": "修订选项",
   "Results": "结果",
   "No results for {{query}}": "没有关于 {{query}} 的结果",
   "Manage": "管理",
@@ -473,7 +474,7 @@
   "Change permissions?": "更改权限？",
   "{{ documentName }} cannot be moved within {{ parentDocumentName }}": "{{ documentName }} 不能在 {{ parentDocumentName }} 中被移动",
   "You can't reorder documents in an alphabetically sorted collection": "当前集合为字母顺序排序，暂不支持手动调整文档顺序。",
-  "The {{ documentName }} cannot be moved here": "{{ documentName }} 不能被移动到这里",
+  "{{ documentName }} cannot be moved here": "{{ documentName }} cannot be moved here",
   "Return to App": "返回应用",
   "Installation": "安装",
   "Unstar document": "取消收藏文档",
@@ -554,6 +555,7 @@
   "Italic": "斜体",
   "Sorry, that link won’t work for this embed type": "抱歉，该链接不适用于此嵌入类型",
   "File attachment": "附件",
+  "Embed PDF": "Embed PDF",
   "Enter a link": "输入一个链接",
   "Big heading": "主标题",
   "Medium heading": "次标题",
@@ -615,6 +617,7 @@
   "Account": "账号",
   "API & Apps": "API 与应用程序",
   "Details": "详情",
+  "Authentication": "Authentication",
   "Security": "安全性",
   "Features": "功能",
   "Members": "成员",
@@ -647,7 +650,6 @@
   "Revoking": "吊销中",
   "Are you sure you want to revoke access?": "您确定要移除权限吗？",
   "Delete app": "删除应用",
-  "Revision options": "修订选项",
   "Share options": "分享选项",
   "Headings you add to the document will appear here": "添加到文档中的标题将显示在这里",
   "Contents": "目录",
@@ -1003,6 +1005,19 @@
   "Authorization URL": "授权 URL",
   "Where users are redirected to authorize this app": "用户登录此应用时被重定向到的地址",
   "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.": "通过应用，您可以为 Outline 构建内部或公开的集成方案，并通过 OAuth 协议实现安全访问。详见<em>开发者文档</em>。",
+  "Settings saved": "设置已保存",
+  "Are you sure?": "Are you sure?",
+  "Removing": "Removing",
+  "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.": "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.",
+  "Manage how members sign-in to your workspace and which authentication providers are enabled.": "Manage how members sign-in to your workspace and which authentication providers are enabled.",
+  "Allow members to sign-in with {{ authProvider }}": "允许成员使用 {{ authProvider }} 登录",
+  "Connect {{ authProvider }} to allow members to sign-in": "Connect {{ authProvider }} to allow members to sign-in",
+  "Connected": "已连接",
+  "Disabled": "已禁用",
+  "Connect": "连接",
+  "Allow members to sign-in using their email address": "允许成员使用他们的电子邮件登录",
+  "The server must have SMTP configured to enable this setting": "服务器必须配置 SMTP 以启用此设置",
+  "Restrictions": "Restrictions",
   "by {{ name }}": "由 {{ name }}创建",
   "Last used": "最后使用的",
   "No expiry": "没有到期",
@@ -1011,7 +1026,6 @@
   "Copied": "已复制",
   "Are you sure you want to revoke the {{ tokenName }} token?": "确认吊销这个 {{ tokenName }} token 吗？",
   "Disconnect integration": "断开集成",
-  "Connected": "已连接",
   "Disconnecting": "正在断开连接",
   "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "您确定要移除与 <em>{{ service }}</em> 的集成吗？",
   "This will stop sending analytics events to the configured instance.": "这将停止向配置实例发送分析事件。",
@@ -1082,7 +1096,6 @@
   "You can import a zip file that was previously exported from an Outline installation – collections, documents, and images will be imported. In Outline, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "您可以导入之前从 Outline 安装中导出的 zip 文件 – 文档集、文档和图片将会被导入。在 Outline 的侧边栏设置中打开 <em>导出</em> 并单击 <em>导出数据</em>。",
   "Drag and drop the zip file from the Markdown export option in {{appName}}, or click to upload": "拖放或单击上传从 {{appName}} 的 Markdown 导出选项导出的 zip 文件",
   "Configure": "配置",
-  "Connect": "连接",
   "Last active": "最近活跃",
   "Role": "角色",
   "Guest": "访客",
@@ -1103,7 +1116,6 @@
   "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "左",
   "Right": "右",
-  "Settings saved": "设置已保存",
   "Logo updated": "徽标已更新",
   "Unable to upload new logo": "无法上传新徽标",
   "Delete workspace": "删除工作区",
@@ -1208,11 +1220,7 @@
   "Are you sure you want to require invites?": "你确定要发出邀请吗？",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "新用户首先需要通过邀请来创建一个账户。 <em>默认角色</em> 和 <em>允许的域</em> 将不再适用。",
   "Settings that impact the access, security, and content of your workspace.": "工作区全局设置：访问权限、安全性与内容管理。",
-  "Allow members to sign-in with {{ authProvider }}": "允许成员使用 {{ authProvider }} 登录",
-  "Disabled": "已禁用",
-  "Allow members to sign-in using their email address": "允许成员使用他们的电子邮件登录",
-  "The server must have SMTP configured to enable this setting": "服务器必须配置 SMTP 以启用此设置",
-  "Access": "访问",
+  "Invites": "Invites",
   "Allow users to send invites": "允许用户发送邀请",
   "Allow editors to invite other people to the workspace": "允许编辑者邀请其他人到工作区",
   "Require invites": "需要邀请",
